[package]
name = "wk-rs"
version = "0.1.0"
edition = "2021"
resolver = "2"
links = "wk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1"
bindgen = "0.66"

[dependencies]
libR-sys = "0.5.0"

[features]
export_bindings = []

